--- a/pom.xml
+++ b/pom.xml
@@ -16,16 +16,32 @@
     </properties>
 
     <dependencies>
+
+        <!--<dependency>-->
+            <!--<groupId>ognl</groupId>-->
+            <!--<artifactId>ognl</artifactId>-->
+            <!--<version>3.2.6</version>-->
+            <!--<scope>compile</scope>-->
+            <!--&lt;!&ndash;<optional>true</optional>&ndash;&gt;-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.mybatis</groupId>-->
+            <!--<artifactId>mybatis</artifactId>-->
+            <!--<version>3.4.6</version>-->
+        <!--</dependency>-->
+
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.4.6</version>
+            <version>3.5.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-spring</artifactId>
-            <version>1.3.2</version>
-        </dependency>
+
+
+        <!--<dependency>-->
+            <!--<groupId>org.mybatis</groupId>-->
+            <!--<artifactId>mybatis-spring</artifactId>-->
+            <!--<version>1.3.2</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>mysql</groupId>
